--- a/app/views/flats/index.html.erb
+++ b/app/views/flats/index.html.erb
@@ -1,35 +1,30 @@
 <p id="notice"><%= notice %></p>
 
 <h1>Flats</h1>
+<div class="row">
+  <% @flats.each do |flat| %>
+    <div class="col-4 mt-4">
+      <div class="card-trip">
+        <img src="http://lorempixel.com/400/200/" />
+        <div class="card-trip-infos">
+          <div>
+            <h2><%= flat.name %></h2>
+            <p><%= flat.description %></p>
+          </div>
+          <div><h2 class="card-trip-pricing"><%= flat.price_per_night %>¢</h2>
+          <h2 class="card-trip-pricing"><%= flat.number_of_guests %> <i class="far fa-user"></i></h2></div>
+          <div>
+            <%= link_to 'Show', flat, :class => 'm-1 ml-3 btn-primary mw-100' %>
+            <%= link_to 'Edit', edit_flat_path(flat), :class => "m-1 ml-3  btn btn-warning btn-block" %>
+            <%= link_to 'Destroy', flat, :class => "m-1 ml-3 btn btn-danger btn-block", method: :delete, data: { confirm: 'Are you sure?' } %>
+          </div>
+        </div>
+      </div>
+    </div>
+  <% end %>
+</div>
 
-<table>
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th>Address</th>
-      <th>Description</th>
-      <th>Price per night</th>
-      <th>Number of guests</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @flats.each do |flat| %>
-      <tr>
-        <td><%= flat.name %></td>
-        <td><%= flat.address %></td>
-        <td><%= flat.description %></td>
-        <td><%= flat.price_per_night %></td>
-        <td><%= flat.number_of_guests %></td>
-        <td><%= link_to 'Show', flat %></td>
-        <td><%= link_to 'Edit', edit_flat_path(flat) %></td>
-        <td><%= link_to 'Destroy', flat, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
 
 <br>
 
-<%= link_to 'New Flat', new_flat_path %>
+<%= link_to 'New Flat', new_flat_path, :class => 'btn btn-success' %>
